--- a/vue/src/styles/global.scss
+++ b/vue/src/styles/global.scss
@@ -5,3 +5,7 @@
 // .hd-error {
 //   @apply rounded-md bg-pink-500 text-white text-xs px-2 py-1 mt-2;
 // }
+
+.el-tabs__item {
+  border-bottom: solid 1px #ddd !important;
+}
