--- a/vue/src/styles/global.scss
+++ b/vue/src/styles/global.scss
@@ -12,3 +12,9 @@
 .el-dialog__body {
   padding-top: 10px !important;
 }
+
+@media screen and (max-width: 768px) {
+  .el-message-box {
+    width: 350px;
+  }
+}
