--- a/vue/src/styles/global.scss
+++ b/vue/src/styles/global.scss
@@ -13,6 +13,11 @@
   padding-top: 10px !important;
 }
 
+.el-alert {
+  border: solid 1px #dcdcdc !important;
+  margin: 5px 0 !important;
+}
+
 @screen sm {
   .el-message-box {
     width: 350px;
